--- a/css/milemarker.css
+++ b/css/milemarker.css
@@ -38,6 +38,11 @@ header .mdl-button {
   background-color: #4caf50;
 }
 
+.mdl-layout__drawer .mdl-navigation .active {
+  background-color: #e0e0e0;
+  color: #333 !important;
+}
+
 table td {
   white-space: normal;
 }
